--- a/src/css/responsive.css
+++ b/src/css/responsive.css
@@ -53,6 +53,12 @@
   .hero__title {
     font-size: var(--font-size-4xl);
   }
+
+  .hero__container {
+    grid-template-columns: 1fr;
+    gap: var(--space-12);
+    text-align: center;
+    }
   
   .hero__description {
     font-size: var(--font-size-base);
